# scraping-lawsuits

./: .gitignore  README.md  debug.py  pyproject.toml
parsing_lawsuits/: python_callables.py
